SVG Load events shouldn't need a presshell to fire.  Bug 380417, r=jwatt andsmaug, sr=tor